# rust-gentle-intro

./: Cargo.toml  hello  reading-from-files  strings  vectors
01-basics/: hello.rs  iterators.rs  matching.rs  reading-from-files.rs  strings.rs  vectors.rs
01-basics/arrays-and-slices/: Cargo.toml
01-basics/arrays-and-slices/src/: main.rs
01-basics/command-line-args/: Cargo.toml
01-basics/command-line-args/src/: main.rs
01-basics/function-types/: Cargo.toml
01-basics/function-types/src/: main.rs
01-basics/hello/: Cargo.toml
01-basics/iterators/: Cargo.toml
01-basics/matching/: Cargo.toml
01-basics/matching/src/: main.rs
01-basics/reading-from-files/: Cargo.toml
01-basics/strings/: Cargo.toml
01-basics/vectors/: Cargo.toml
02-structs-enums-and-matching/move-it/: Cargo.toml
02-structs-enums-and-matching/move-it/src/: main.rs
02-structs-enums-and-matching/structs/: Cargo.toml
02-structs-enums-and-matching/structs/src/: main.rs
02-structs-enums-and-matching/tuples/: Cargo.toml
02-structs-enums-and-matching/tuples/src/: main.rs
